[package]
name = "gambit"
version = "0.1.0"
edition = "2021"
authors = ["Chandrakana Nandi <chandra@certora.com>", "Samwise Parkinson <samwise@certora.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
strum = "0.24.1"
strum_macros = "0.24.3"
clap = { version = "4.0.29", features = ["derive"] }
clap_complete = "4.0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = { version = "0.10.0", default-features = false }
log = "0.4"
rand_pcg = "0.3.0"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
itertools = "0.10.5"
regex = "1"
scanner-rust = "2.0.16"
global_counter = "0.2.2"