[package]
name = "gambit"
version = "0.1.0"
edition = "2021"
authors = [
    "Chandrakana Nandi <chandra@certora.com>",
    "Samwise Parkinson <samwise@certora.com>",
    "Ben Kushigian <ben.kushigian@certora.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "4.0.29", features = ["derive"] }
clap_complete = "4.0.6"
csv = "1.2.1"
env_logger = { version = "0.10.0", default-features = false }
log = "0.4"
project-root = "0.2"
rand_pcg = "0.3.0"
rand = { version = "0.8.5", features = ["std"] }
rand_chacha = "0.3.1"
regex = "1"
scanner-rust = "2.0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
strum = "0.24.1"
strum_macros = "0.24.3"
tempfile = "3"
